cloudinary files synced

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,7 +34,7 @@
             <h4 class="font-italic">Dip Arch, B.Arch, Associate of Indian Institute of Architecture</h4>
             <hr>
             <p>I have over 22 years of experience in the field of architecture and have worked with a number of architectural firms in India and UK. During my career I have worked on a variety of projects,
-              ranging from large scale luxury housing to renewable energy plants abd gave gained expertise in designing a vast variety of commercial and residential projects. My role as the Director of my own company VSDesignSolutions
+              ranging from large scale luxury housing to renewable energy plants and gave gained expertise in designing a vast variety of commercial and residential projects. My role as the Director of my own company VSDesignSolutions
               for the past year has also given me an insight into the managerial side of the workplace, showing me the various steps needed to be taken when approaching councils for planning permission. The following pages should help to showcase my talents.</p>
           </div>
         </div>
