--- a/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide1.html.erb
@@ -9,19 +9,19 @@
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/FrontViewCamera.jpg", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">44 Halkingcroft Front View</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Front View</figcaption>
           </figure>
         </div>
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/RearViewCamera.jpg", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">44 Halkingcroft Rear View</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Rear View</figcaption>
           </figure>
         </div>
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/SideViewCamera.jpg", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">44 Halkingcroft Side View</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Side View</figcaption>
           </figure>
         </div>
       </div>
@@ -29,13 +29,13 @@
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Existing Floor Plan.png", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">44 Halkingcroft Floor Plan</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Floor Plan</figcaption>
           </figure>
         </div>
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Existing Elevation.png", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">44 Halkingcroft Elevation Plan</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Elevation Plan</figcaption>
           </figure>
         </div>
       </div>
