--- a/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide2.html.erb
+++ b/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide2.html.erb
@@ -7,7 +7,7 @@
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/DesignFrontView.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Front View Design</figcaption>
+            <figcaption class="figcaption text-center font-italic">Front View Design</figcaption>
           </figure>
         </div>
 
@@ -18,7 +18,7 @@
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/DesignRearView.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Rear View Design</figcaption>
+            <figcaption class="figcaption text-center font-italic">Rear View Design</figcaption>
           </figure>
           <div class="row">
             <div class="col">
