--- a/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide3.html.erb
+++ b/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide3.html.erb
@@ -8,13 +8,13 @@
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Elevation.png", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">Proposed Elevations</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">Proposed Elevations</figcaption>
           </figure>
         </div>
         <div class="col">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Floor Plan.png", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">Proposed Floor Plans</figcaption>
+            <figcaption class="figcaption text-center text-white font-italic">Proposed Floor Plans</figcaption>
           </figure>
         </div>
       </div>
