production changes + column fix

--- a/app/views/layouts/BirlaOffice/_slide1.html.erb
+++ b/app/views/layouts/BirlaOffice/_slide1.html.erb
@@ -20,19 +20,19 @@
     <div class="col" style="bottom: 1rem">
       <figure class="figure">
       <%= image_tag("corporate-office-interior.png", class: 'image move-up') %>
-      <figcaption class="figcaption text-center text-white font-italic">Office view via main corridor</figcaption>
+      <figcaption class="figure-caption text-center text-white font-italic">Office view via main corridor</figcaption>
       </figure>
     </div>
-    <div class="col" >
+    <div class="col-md">
       <figure class="figure">
       <%= image_tag("Corporate-Office.png", class: "image move-up") %>
-      <figcaption class="figcaption text-center text-white font-italic">Office view via main entrance</figcaption>
+      <figcaption class="figure-caption text-center text-white font-italic">Office view via main entrance</figcaption>
       </figure>
     </div>
-    <div class="col">
+    <div class="col-md">
       <figure class="figure">
       <%= image_tag("corporate-office-exterior.png", class: "image move-up") %>
-      <figcaption class="figcaption text-center text-white font-italic">Office view via main entrance</figcaption>
+      <figcaption class="figure-caption text-center text-white font-italic">Office view via main entrance</figcaption>
       </figure>
     </div>
   </div>
