--- a/app/views/layouts/ITPO/_slide1.html.erb
+++ b/app/views/layouts/ITPO/_slide1.html.erb
@@ -9,27 +9,27 @@
       <p>Organising fairs & designing stalls at national & international levels. Operation & Maintenance of 150 acres of exhibition ground in New Delhi.</p>
       <p>Worked with team in designing and planning of exhibitions halls 8-11 and the development of surroundings such as restaurants and landscapes.</p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("ITPO/Halls 8-11.png", class: "image") %>
-            <figcaption class="figcaption text-white text-center font-italic">Halls 8-11 Plan</figcaption>
+            <figcaption class="figure-caption text-white text-center font-italic">Halls 8-11 Plan</figcaption>
           </figure>
         </div>
       </div>
     </div>
     <div class="col-12 col-md-6">
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("ITPO/Layout-Plan.png", class: "image") %>
-            <figcaption class="figcaption text-white text-center font-italic">Pragati Maidan Layout Plan</figcaption>
+            <figcaption class="figure-caption text-white text-center font-italic">Pragati Maidan Layout Plan</figcaption>
           </figure>
         </div>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <%#= image_tag("Pragati-Maidan.png", class: "image move-up") %>
     </div>
   </div>
