--- a/app/views/layouts/SpaceQStudios/Peterborough/_slide1.html.erb
+++ b/app/views/layouts/SpaceQStudios/Peterborough/_slide1.html.erb
@@ -6,7 +6,7 @@
       <p>Peterborough Green Energy Ltd is incorporated primarily to develop, build, own and operate the 18MW (Phase 1) Biomass Waste to Energy Power Plant Project in Peterborough, United Kingdom. <br>
         Once operational, the plant will draw upon a mix of best available technologies to achieve maximum diversion of waste from landfill and create renewable energy and recycled products at the same time.</p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <%= image_tag("Azam/PboroBack.png", class: "image")%>
         </div>
       </div>
@@ -14,12 +14,12 @@
     <div class="col-12 col-md-8 mb-1">
       <div class="figure">
         <%= image_tag("Azam/PBoroFront.png", class: "image") %>
-        <figcaption class="figcaption text-center font-italic">Peterborough Energy Plant Entry <br>and Exit Elevation Views</figcaption>
+        <figcaption class="figure-caption text-center font-italic">Peterborough Energy Plant Entry <br>and Exit Elevation Views</figcaption>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <%= image_tag("Azam/PboroLong.png", class: "image mb-1") %>
     </div>
   </div>
