--- a/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide1.html.erb
@@ -5,24 +5,24 @@
       <h4>Introduction</h4>
       <p>Double storey side and rear extension with porch.</p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/572 Hanworth Road/frontView2ndFloor.jpg", class: "image") %>
-            <figcaption class="font-italic text-center figcaption">Existing Front View 1st Floor</figcaption>
+            <figcaption class="font-italic text-center figure-caption">Existing Front View 1st Floor</figcaption>
           </figure>
         </div>
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/572 Hanworth Road/drivewar.jpg", class: "image") %>
-            <figcaption class="font-italic text-center figcaption">Existing Rear View</figcaption>
+            <figcaption class="font-italic text-center figure-caption">Existing Rear View</figcaption>
           </figure>
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/572 Hanworth Road/Floor and Elevation Existing.png", class: "image") %>
-            <figcaption class="font-italic text-center figcaption">Existing Floor and Elevation Plans</figcaption>
+            <figcaption class="font-italic text-center figure-caption">Existing Floor and Elevation Plans</figcaption>
           </figure>
         </div>
       </div>
@@ -30,7 +30,7 @@
     <div class="col-12 col-md-5">
       <figure class="figure">
         <%= image_tag("VSDESIGN/572 Hanworth Road/frontView.jpg", class: "image") %>
-        <figcaption class="font-italic text-center figcaption">Existing Front View</figcaption>
+        <figcaption class="font-italic text-center figure-caption">Existing Front View</figcaption>
       </figure>
     </div>
   </div>
