--- a/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide2.html.erb
+++ b/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide2.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h3>572 Hanworth Road, Hounslow (In Development)</h3>
       <h4>Proposal</h4>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <figure class="figure">
         <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Floor Plan.png", class: "image") %>
-        <figcaption class="figcaption text-center text-white font-italic">Proposed Floor Plan</figcaption>
+        <figcaption class="figure-caption text-center text-white font-italic">Proposed Floor Plan</figcaption>
       </figure>
     </div>
-    <div class="col">
+    <div class="col-md">
       <figure class="figure">
         <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Elevation.png", class: "image") %>
-        <figcaption class="figcaption text-center text-white font-italic">Proposed Elevation</figcaption>
+        <figcaption class="figure-caption text-center text-white font-italic">Proposed Elevation</figcaption>
       </figure>
     </div>
   </div>
