--- a/app/views/layouts/VSDesign/62 Halkingcroft/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/62 Halkingcroft/_slide1.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h3>VS Design Solutions</h3>
       <h4>62 Halkingcroft</h4>
       <h4>Introduction</h4>
@@ -9,7 +9,7 @@
         <div class="col-12 col-md-7">
           <figure class="figure">
             <%= image_tag("VSDESIGN/62 Halkingcroft/LocationPlan.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Location and Site Plan</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">Location and Site Plan</figcaption>
           </figure>
         </div>
         <div class="col-12 col-md-5">
@@ -18,7 +18,7 @@
             <div class="col-12 col-md-10">
               <figure class="figure justify-content-center">
                 <%= image_tag("VSDESIGN/62 Halkingcroft/front-image-original.jpg", class: "image") %>
-                <figcaption class="figcaption text-white text-center font-italic">Original Front View</figcaption>
+                <figcaption class="figure-caption text-white text-center font-italic">Original Front View</figcaption>
               </figure>
             </div>
           </div>
@@ -27,7 +27,7 @@
             <div class="col-12 col-md-10">
               <figure class="figure">
                 <%= image_tag("VSDESIGN/62 Halkingcroft/back-image-original.jpg", class: "image") %>
-                <figcaption class="figcaption text-white text-center font-italic">Original Rear View</figcaption>
+                <figcaption class="figure-caption text-white text-center font-italic">Original Rear View</figcaption>
               </figure>
             </div>
           </div>
@@ -36,16 +36,16 @@
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <figure class="figure">
         <%= image_tag("VSDESIGN/62 Halkingcroft/Existing Floor.png", class:"image") %>
-        <figcaption class="figcaption text-center text-white font-italic">Existing Floor Plan</figcaption>
+        <figcaption class="figure-caption text-center text-white font-italic">Existing Floor Plan</figcaption>
       </figure>
     </div>
-    <div class="col">
+    <div class="col-md">
       <figure class="figure">
         <%= image_tag("VSDESIGN/62 Halkingcroft/Exisitng Elavation.png", class:"image") %>
-        <figcaption class="figcaption text-center text-white font-italic">Existing Elevation Plan</figcaption>
+        <figcaption class="figure-caption text-center text-white font-italic">Existing Elevation Plan</figcaption>
       </figure>
     </div>
   </div>
