--- a/app/views/layouts/VSDesign/62 Halkingcroft/_slide2.html.erb
+++ b/app/views/layouts/VSDesign/62 Halkingcroft/_slide2.html.erb
@@ -1,38 +1,38 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h3>62 Halkingcroft</h3>
       <h4>Planning and Design</h4>
       <p>
         As director of VS Design Solutions, my duties involved creating plans for extensions and elevations for the client's house, as well as then seeking planning permissions through the council for said plans.
       </p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
           <%= image_tag('VSDESIGN/62 Halkingcroft/Proposed Ground Floor.png', class:"image") %>
-          <figcaption class="figcaption text-center font-italic">Proposed Ground Floor Plan</figcaption>
+          <figcaption class="figure-caption text-center font-italic">Proposed Ground Floor Plan</figcaption>
           </figure>
         </div>
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag('VSDESIGN/62 Halkingcroft/Proposed Elevation.png', class:"image") %>
-            <figcaption class="figcaption text-center font-italic">Proposed Ground Floor Plan</figcaption>
+            <figcaption class="figure-caption text-center font-italic">Proposed Ground Floor Plan</figcaption>
           </figure>
         </div>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <figure class="figure">
         <%= image_tag('VSDESIGN/62 Halkingcroft/proposed-3d-front (3).jpg', class: "image") %>
-        <figcaption class="figcaption text-center font-italic">Proposed Front View</figcaption>
+        <figcaption class="figure-caption text-center font-italic">Proposed Front View</figcaption>
       </figure>
     </div>
-    <div class="col">
+    <div class="col-md">
       <figure class="figure">
         <%= image_tag('VSDESIGN/62 Halkingcroft/proposed-3d-back.jpg', class: "image") %>
-        <figcaption class="figcaption text-center font-italic">Proposed Rear View</figcaption>
+        <figcaption class="figure-caption text-center font-italic">Proposed Rear View</figcaption>
       </figure>
     </div>
   </div>
