--- a/app/views/layouts/VSDesign/62 Halkingcroft/_slide3.html.erb
+++ b/app/views/layouts/VSDesign/62 Halkingcroft/_slide3.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h3>62 Halkingcroft</h3>
       <h4>The Result</h4>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag('VSDESIGN/62 Halkingcroft/FinalImage.jpg', class: "image") %>
-            <figcaption class="figcaption text-white text-center font-italic">Completed Front View</figcaption>
+            <figcaption class="figure-caption text-white text-center font-italic">Completed Front View</figcaption>
           </figure>
         </div>
       </div>
