--- a/app/views/layouts/eWaterPower/_slide1.html.erb
+++ b/app/views/layouts/eWaterPower/_slide1.html.erb
@@ -1,7 +1,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-md">
         <h3>eWaterPower</h3>
         <h4>Abingdon Project</h4>
         <p class="overide">Project aimed to install 3 Archimedean screws with power generated forecast to be 100KW.<br>
