--- a/app/views/layouts/eWaterPower/_slide3.html.erb
+++ b/app/views/layouts/eWaterPower/_slide3.html.erb
@@ -7,7 +7,7 @@
         Equivalent demand for 500+ houses, comprising most of Sandford. <br>
         The interesting part of hydropower is the specially designed system of a fish pass to allow fish to safely pass the Archimedes screws.</p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("Sandford/SitePlan.png", class: "image")%>
             <figcaption class="figure-caption font-italic text-center">Sandford Site Plan</figcaption>
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("Sandford/Weir3.jpg", class: "image") %>
             <figcaption class="figure-caption font-italic text-center">Sandford Weir (Pre-Development)</figcaption>
@@ -25,7 +25,7 @@
     </div>
     <div class="col-12 col-md-5 mt-1">
       <div class="row">
-        <div class="col">
+        <div class="col-md">
         <figure class="figure">
           <%= image_tag("Sandford/SandfordWeir.jpg", class: "image")%>
           <figcaption class="figure-caption font-italic text-center">Sandford Weir (During Development)</figcaption>
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("Sandford/FishPass.png", class: "image") %>
             <figcaption class="figure-caption font-italic text-center">Sandford Fish Pass</figcaption>
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag('Sandford/SandfordBrushBaffle.png', class: "image") %>
             <figcaption class="figure-caption font-italic text-center">Brush Baffle Lariner Pass</figcaption>
