--- a/app/views/layouts/home/_aboutme.html.erb
+++ b/app/views/layouts/home/_aboutme.html.erb
@@ -13,12 +13,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-md">
             <h5 class="float-left"><i class="fas fa-envelope"></i> vandy18@gmail.com</h5>
           </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-md">
             <h5 class="float-left"><i class="fab fa-linkedin"></i> <%= link_to "Vandana Sharma", "https://www.linkedin.com/in/vandana-sharma-a5213558", class: "btn-custom" %></h5>
           </div>
         </div>
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h1>Vandana Sharma</h1>
       <h4 class="font-italic">Dip Arch, B.Arch, Associate of Indian Institute of Architecture</h4>
       <hr>
