--- a/app/views/layouts/SpaceQStudios/Elavation/_slide1.html.erb
+++ b/app/views/layouts/SpaceQStudios/Elavation/_slide1.html.erb
@@ -1,30 +1,30 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h3>Space-Q Studio</h3>
       <h4>Extensions and Elevations</h4>
       <p>During my time at Space-Q Studio, I was also tasked with the planning of various extensions and elevations applied to pre-existing properties.</p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <div class="figure">
             <%= image_tag("Azam/earleyOutdoorElavation.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Rear and Side Elevation Plan for 10 Moor Copse Close</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">Rear and Side Elevation Plan for 10 Moor Copse Close</figcaption>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md">
           <div class="figure">
             <%= image_tag("Azam/Earley-proposed-rearSide.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Rear and Side Extension Floor Plan for 10 Moor Copse Close</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">Rear and Side Extension Floor Plan for 10 Moor Copse Close</figcaption>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <div class="figure">
         <%= image_tag("Azam/LoftExtensionFloor.png", class: "image") %>
-        <figcaption class="figcaption text-center text-white font-italic">Ground Floor Plan for Rear and Loft Extension in Slough</figcaption>
+        <figcaption class="figure-caption text-center text-white font-italic">Ground Floor Plan for Rear and Loft Extension in Slough</figcaption>
       </div>
     </div>
   </div>
