--- a/app/views/layouts/SpaceQStudios/Peterborough/_slide2.html.erb
+++ b/app/views/layouts/SpaceQStudios/Peterborough/_slide2.html.erb
@@ -3,36 +3,36 @@
     <div class="col-12 col-md-5">
       <h3>Peterborough Energy Plant (Continued)</h3>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <div class="figure">
             <%= image_tag("Azam/PBoroPlan.png", class: "image") %>
-            <figcaption class="figcaption font-italic text-white text-center">Peterborough Energy Plant Plan View</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Peterborough Energy Plant Plan View</figcaption>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <div class="figure">
             <%= image_tag("Azam/SectionB-B.png", class: "image") %>
-            <figcaption class="figcaption font-italic text-white text-center">Section B-B of Energy Plant</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Section B-B of Energy Plant</figcaption>
           </div>
         </div>
       </div>
     </div>
     <div class="col-12 col-md-7">
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <div class="figure">
             <%= image_tag("Azam/SitePlan.png", class: "image") %>
-            <figcaption class="figcaption font-italic text-white text-center">Peterborough Energy Site Plan</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Peterborough Energy Site Plan</figcaption>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <div class="figure">
             <%= image_tag("Azam/Peterborough indoor floor plan.png", class: "image") %>
-            <figcaption class="figcaption font-italic text-white text-center">Indoor Section Floor Plan</figcaption>
+            <figcaption class="figure-caption font-italic text-white text-center">Indoor Section Floor Plan</figcaption>
           </div>
         </div>
       </div>
