--- a/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide1.html.erb
@@ -1,41 +1,41 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h3>VS Design Solutions</h3>
       <h4>44 Halkingcroft (Under Development)</h4>
       <h4>Introduction</h4>
       <p>Single storey rear extension, double storey side extension along with porch and rear dormer and front velux window.</p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/FrontViewCamera.jpg", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Front View</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">44 Halkingcroft Front View</figcaption>
           </figure>
         </div>
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/RearViewCamera.jpg", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Rear View</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">44 Halkingcroft Rear View</figcaption>
           </figure>
         </div>
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/SideViewCamera.jpg", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Side View</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">44 Halkingcroft Side View</figcaption>
           </figure>
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Existing Floor Plan.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Floor Plan</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">44 Halkingcroft Floor Plan</figcaption>
           </figure>
         </div>
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Existing Elevation.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">44 Halkingcroft Elevation Plan</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">44 Halkingcroft Elevation Plan</figcaption>
           </figure>
         </div>
       </div>
