--- a/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide2.html.erb
+++ b/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide2.html.erb
@@ -4,10 +4,10 @@
       <h3>44 Halkingcroft</h3>
       <h4>Design and Development</h4>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/DesignFrontView.png", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">Front View Design</figcaption>
+            <figcaption class="figure-caption text-center font-italic">Front View Design</figcaption>
           </figure>
         </div>
 
@@ -15,13 +15,13 @@
     </div>
     <div class="col-12 col-md-7">
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/DesignRearView.png", class: "image") %>
-            <figcaption class="figcaption text-center font-italic">Rear View Design</figcaption>
+            <figcaption class="figure-caption text-center font-italic">Rear View Design</figcaption>
           </figure>
           <div class="row">
-            <div class="col">
+            <div class="col-md">
               <p>With the main requirements for the project being extensions, it was important to create sketches and mock-up designs to be used as a baseline for any plans drawn up for a proposal.</p>
             </div>
           </div>
