--- a/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide3.html.erb
+++ b/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide3.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md">
       <h3>44 Halkingcroft</h3>
       <h4>Proposal</h4>
       <p>The following plans were created using the designs shown previously. The project was approved and is currently under development.</p>
       <div class="row">
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Elevation.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Proposed Elevations</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">Proposed Elevations</figcaption>
           </figure>
         </div>
-        <div class="col">
+        <div class="col-md">
           <figure class="figure">
             <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Floor Plan.png", class: "image") %>
-            <figcaption class="figcaption text-center text-white font-italic">Proposed Floor Plans</figcaption>
+            <figcaption class="figure-caption text-center text-white font-italic">Proposed Floor Plans</figcaption>
           </figure>
         </div>
       </div>
