--- a/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide2.html.erb
+++ b/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide2.html.erb
@@ -8,14 +8,8 @@
   <div class="row">
     <div class="col-md">
       <figure class="figure">
-        <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Floor Plan.png", class: "image") %>
-        <figcaption class="figure-caption text-center text-white font-italic">Proposed Floor Plan</figcaption>
-      </figure>
-    </div>
-    <div class="col-md">
-      <figure class="figure">
-        <%= image_tag("VSDESIGN/44 Halkingcroft/Proposed Elevation.png", class: "image") %>
-        <figcaption class="figure-caption text-center text-white font-italic">Proposed Elevation</figcaption>
+        <%= image_tag("VSDESIGN/572 Hanworth Road/Proposal.png", class: "image") %>
+        <figcaption class="figure-caption text-center text-white font-italic">Proposed Floor and Elevation Plan</figcaption>
       </figure>
     </div>
   </div>
