--- a/app/views/layouts/Laburnum/_slide1.html.erb
+++ b/app/views/layouts/Laburnum/_slide1.html.erb
@@ -16,12 +16,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md fit-right">
-      <%= image_tag("Photo1.jpg", class: "image1", style: "margin-top: 0.5rem")%>
+    <div class="col-md">
+      <%= image_tag("Photo1.jpg", class: "image", style: "margin-top: 0.5rem")%>
       <figcaption class="figure-caption text-center font-italic">Completed Apartment Block</figcaption>
     </div>
-    <div class="col-md fit-left">
-      <%= image_tag("Photo.jpg", class: "image2", style: "margin-top: 0.5rem") %>
+    <div class="col-md ">
+      <%= image_tag("Photo.jpg", class: "image", style: "margin-top: 0.5rem") %>
       <figcaption class="figure-caption text-center font-italic">Completed Block of Villas</figcaption>
     </div>
   </div>
