--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,6 +34,16 @@
       <%= render('layouts/VSDesign/62 Halkingcroft/slide3') %>
     </div>
   </div>
+  <div class="section fp-auto-height-responsive" id="VSDesign2">
+    <div class="slide" id="slide1" data-anchor="VS1">
+      <%= render('layouts/VSDesign/Unnamed Project/slide1') %>
+    </div>
+  </div>
+  <div class="section" id="interior">
+    <div class="slide" id="slide2">
+      <%= render('layouts/Interior Design/slide1') %>
+    </div>
+  </div>
   <div class="section fp-auto-height-responsive" id="Azam">
     <div class="slide" id="slide1" data-anchor="pBoro">
       <%= render('layouts/SpaceQStudios/Peterborough/slide1') %>
