--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,6 @@ $font: 'Architects Daughter', cursive;
 $font1: 'Quicksand', sans-serif;
 
 body {
-  background-color: #343a40;
   font-family: $font1;
 }
 
@@ -50,14 +49,22 @@ body {
 }
 
 .head {
-  color: white;
+  color: black;
   text-decoration: none;
   border-bottom: 2px solid transparent;
-  transition: 0.8s;
+  transition: all .5s ease-in-out;
   &:hover, &:after {
-    color: white;
+    color: black;
     text-decoration: none;
-    border-color: white;
+    border-color: black;
+  }
+
+}
+
+.big {
+  transition: all .2s ease-in-out;
+  &:hover, &:after, &:active {
+    transform: scale(1.05);
   }
 }
 
@@ -78,6 +85,7 @@ body {
     color: black;
     text-decoration: none;
     border-color: black;
+    transform: scale(1.1);
   }
 }
 
@@ -102,6 +110,10 @@ body {
     text-decoration: none;
     border-color: #caffee;
   }
+}
+
+.bg-white {
+  background-color: #f8f9fa !important;
 }
 
 .title-name {
