--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,21 @@
 <div class="pos-f-t fixed-top">
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-3">
-      <h4 data-menuanchor="VS0"><a href="#home" class="head">Home</a></h4>
       <h5 data-menuanchor="VS0"><a href="#project1" class="project-link">44 Halkingcroft</a></h5>
       <h5 data-menuanchor="VS1"><a href="#project2" class="project-link">572 Hanword Road</a></h5>
       <h5 data-menuanchor="VS1"><a href="#project3" class="project-link">62 Halkingcroft</a></h5>
-      <h5 data-menuanchor="pBoro"><a href="#project4" class="project-link">Peterborough Energy Plant</a></h5>
-      <h5 data-menuanchor="spaceQ1"><a href="#project5" class="project-link">Space-Q Studio Projects</a></h5>
-      <h5 data-menuanchor="hydropower"><a href="#project6" class="project-link">Sandford Hydropower</a></h5>
-      <h5 data-menuanchor="hydropower-1"><a href="#project6/hydropower-1" class="project-link">Reading Hydropower</a></h5>
-      <h5 data-menuanchor="hydropower-2"><a href="#project6/hydropower-2" class="project-link">Abingdon Hydropower</a></h5>
-      <h5 data-menuanchor="ITPOSlide1"><a href="#project7" class="project-link">ITPO Halls 8-11</a></h5>
-      <h5 data-menuanchor="laburnum1"><a href="#project8" class="project-link">The Laburnum</a></h5>
-      <h5 data-menuanchor="birla"><a href="#project9" class="project-link">Birla Corporate Office</a></h5>
+      <h5 data-menuanchor="pBoro"><a href="#project6" class="project-link">Peterborough Energy Plant</a></h5>
+      <h5 data-menuanchor="spaceQ1"><a href="#project7" class="project-link">Space-Q Studio Projects</a></h5>
+      <h5 data-menuanchor="hydropower"><a href="#project8" class="project-link">Sandford Hydropower</a></h5>
+      <h5 data-menuanchor="hydropower-1"><a href="#project8/hydropower-1" class="project-link">Reading Hydropower</a></h5>
+      <h5 data-menuanchor="hydropower-2"><a href="#project8/hydropower-2" class="project-link">Abingdon Hydropower</a></h5>
+      <h5 data-menuanchor="ITPOSlide1"><a href="#project9" class="project-link">ITPO Halls 8-11</a></h5>
+      <h5 data-menuanchor="laburnum1"><a href="#project10" class="project-link">The Laburnum</a></h5>
+      <h5 data-menuanchor="birla"><a href="#project11" class="project-link">Birla Corporate Office</a></h5>
     </div>
   </div>
-  <nav class="navbar z-depth-5 navbar-dark bg-dark" id="navbar">
-    <span><a href="#home" class="title-name text-white head">Vandana Sharma</a></span>
+  <nav class="navbar navbar-light shadow bg-white" id="navbar">
+    <span class="big"><a href="#home" class="title-name head">Vandana Sharma</a></span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
