--- a/app/views/layouts/home/_aboutme.html.erb
+++ b/app/views/layouts/home/_aboutme.html.erb
@@ -5,21 +5,21 @@
         <%= image_tag("me.png", class: "image") %>
       </figure>
     </div>
-    <div class="col-12 col-md-10 px-0">
+    <div class="col-12 col-md-10 px-0 space">
       <div class="container">
         <div class="row">
-          <div class="col mt-2">
-            <h5 class="float-left"><i class="fas fa-phone"></i> 07515478431</h5>
+          <div class="col-md mt-2">
+            <h5 class="float-left big"><i class="fas fa-phone"></i> <a class="btn-custom" href="tel:+(44) 7515-478-431">+(44) 7515-478-431</a></h5>
           </div>
         </div>
         <div class="row">
           <div class="col-md">
-            <h5 class="float-left"><i class="fas fa-envelope"></i> vandy18@gmail.com</h5>
+            <h5 class="float-left big"><i class="fas fa-envelope"></i> <%= mail_to "vandy18@gmail.com", "vandy18@gmail.com", class: "btn-custom" %></h5>
           </div>
         </div>
         <div class="row">
           <div class="col-md">
-            <h5 class="float-left"><i class="fab fa-linkedin"></i> <%= link_to "Vandana Sharma", "https://www.linkedin.com/in/vandana-sharma-a5213558", class: "btn-custom" %></h5>
+            <h5 class="float-left big"><i class="fab fa-linkedin"></i> <%= link_to "Vandana Sharma", "https://www.linkedin.com/in/vandana-sharma-a5213558", class: "btn-custom" %></h5>
           </div>
         </div>
       </div>
