heading for VSDESign changed to freelance

--- a/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide1.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-7">
-      <h3>VS Design Solutions</h3>
+      <h3>Freelance</h3>
       <h4>572 Hanworth Road, Hounslow (In Development)</h4>
       <h4>Introduction</h4>
       <p>Double storey side and rear extension with porch.</p>
