--- a/app/views/layouts/VSDesign/62 Halkingcroft/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/62 Halkingcroft/_slide1.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md">
-      <h3>VS Design Solutions</h3>
+      <h3>Freelance</h3>
       <h4>62 Halkingcroft</h4>
       <h4>Introduction</h4>
       <p>Single storey rear and side extension along with front porch and garage conversion.</p>
