--- a/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/44 Hawlkingcroft/_slide1.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md">
-      <h3>VS Design Solutions</h3>
+      <h3>Freelance</h3>
       <h4>44 Halkingcroft (Under Development)</h4>
       <h4>Introduction</h4>
       <p>Single storey rear extension, double storey side extension along with porch and rear dormer and front velux window.</p>
