--- a/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide1.html.erb
+++ b/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide1.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-7">
       <h3>Freelance</h3>
-      <h4>572 Hanworth Road, Hounslow (In Development)</h4>
+      <h4>572 Hanworth Road, Richmond (In Development)</h4>
       <h4>Introduction</h4>
       <p>Double storey side and rear extension with porch.</p>
       <div class="row">
