--- a/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide2.html.erb
+++ b/app/views/layouts/VSDesign/572 Hanworth Road, Richmond/_slide2.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md">
-      <h3>572 Hanworth Road, Hounslow (In Development)</h3>
+      <h3>572 Hanworth Road, Richmond (In Development)</h3>
       <h4>Proposal</h4>
     </div>
   </div>
