--- a/app/views/layouts/home/_aboutme.html.erb
+++ b/app/views/layouts/home/_aboutme.html.erb
@@ -29,7 +29,7 @@
     <div class="col-md">
       <h1>Vandana Sharma</h1>
       <hr>
-      <p>I have over 22 years of experience in the field of architecture and have worked with a number of architectural firms in India and UK. During my career I have worked on a variety of projects,
+      <p>I have over 22 years of experience in the design and planning industry. During my career I have worked on a variety of projects,
         ranging from large scale luxury housing to renewable energy plants and gave gained expertise in designing a vast variety of commercial and residential projects. My work as a freelancer
         for the past year has also given me an insight into the managerial side of the workplace, showing me the various steps needed to be taken when approaching councils for planning permission. The following pages should help to showcase my talents.</p>
     </div>
